fix(categories): use interpunct instead of pseudo element on mobile

--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -64,17 +64,9 @@
         margin-top 0
 
     .bnk-table-percentage-caption
+        display inline-block
+        margin-right 0.1875rem
         color charcoalGrey
-
-        &::after
-            content ''
-            display inline-block
-            height 1px
-            width 1px
-            background-color coolGrey
-            vertical-align middle
-            margin-left 5px
-            margin-right 4px
 
     +small-screen('min')
         .bnk-table-category-category
